<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/listImages"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher"
            android:padding="5dp"
            />

        <LinearLayout
            android:layout_toRightOf="@id/listImages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@id/listImages"
            >

            <TextView
                android:id="@+id/listKategori"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trending_this_week"
                />

            <TextView
                android:id="@+id/listJumlah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"
                />

            <TextView
                android:id="@+id/listKeterangan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/keterangan"
                />




        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>