<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Grid">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgRestoranKategori"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@mipmap/ic_launcher"
                android:scaleType="centerCrop"/>
            <TextView
                android:id="@+id/txtTitle"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trending_this_week"/>

            <TextView
                android:id="@+id/txtPlacesRes"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"/>

            <TextView
                android:id="@+id/txtKeteranganRes"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/keterangan" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gridRecycler"
        tools:listitem="@layout/grid_layout"
        android:layout_below="@+id/cardView"
        app:layoutManager="android.support.v7.widget.GridLayoutManager"
        >

    </android.support.v7.widget.RecyclerView>

</RelativeLayout>